19253
```scala
import scala.reflect.macros.whitebox._
import scala.language.experimental.macros

object Macros {
  def impl(c: Context)(x: c.Tree) = {
    import c.universe._
    val q"{ class $name(...$paramss) }" = x
    q"{ class $name(...$paramss) }"
  }

  def foo(x: Any): Any = macro impl
}
```
```scala
object Test extends App {
  Macros.foo {
    class X(x: Int)
  }
}
```
```scala
Test.scala:2: error: exception during macro expansion:
java.lang.UnsupportedOperationException: Position.point on NoPosition
	at scala.reflect.internal.util.Position.fail(Position.scala:17)
	at scala.reflect.internal.util.UndefinedPosition.point(Position.scala:95)
	at scala.reflect.internal.util.UndefinedPosition.point(Position.scala:90)
	at scala.reflect.internal.Positions$class.wrappingPos(Positions.scala:42)
	at scala.reflect.internal.SymbolTable.wrappingPos(SymbolTable.scala:16)
	at scala.reflect.internal.Positions$class.wrappingPos(Positions.scala:37)
	at scala.reflect.internal.SymbolTable.wrappingPos(SymbolTable.scala:16)
	at scala.reflect.internal.TreeGen.mkTemplate(TreeGen.scala:378)
	at scala.reflect.internal.ReificationSupport$ReificationSupportImpl$SyntacticClassDef$.apply(ReificationSupport.scala:341)
	at scala.reflect.internal.ReificationSupport$ReificationSupportImpl$SyntacticClassDef$.apply(ReificationSupport.scala:326)
	at Macros$.impl(Macros.scala:9)

  Macros.foo {
             ^
one error found
```
